--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -38,6 +38,9 @@
               <label for="formFile" class="form-label">Product image</label>
               <input class="form-control" type="file" onchange="viewImage(event)" name="myFiles"
                 id="product_image" multiple>
+              <input type="hidden" name="image1" value="<%= productData.image1 %>">
+              <input type="hidden" name="image1" value="<%= productData.image2 %>">
+              <input type="hidden" name="image1" value="<%= productData.image3 %>">
               <img src="../<%=productData.image1%>.jpg" id="imgView" alt="" style="width:100px;height:auto">
             </div>
             <div class="d-flex justify-content-center mt-1">
