--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -40,11 +40,11 @@
 					</span>
 				</div>
 
-				<div class="container flex-sb-m justify-content-center mt-5">
+				
 				<% if(locals.invalid){%>
-					<small class="text-danger justify-content-center"><%=invalid%></small>
+					<small class="text-danger " style="display:flex;margin-top: 2rem;justify-content: center;"><%=invalid%></small>
 				<%}%>
-			</div>
+			
 
 		
 			
