--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -95,7 +95,7 @@
               ></a>
             </li>
             <li class="nav-item cta cta-colored">
-              <a href="cart.html" class="nav-link"
+              <a href="/profile" class="nav-link"
                 ><span class="icon-user"></span
               ></a>
             </li>
@@ -245,11 +245,7 @@
     </section>
 
 
-	<section>
-		<div class="container-fluid pt-5 bg-dark " id="homePage">
-			
-		</div>
-	</section>
+
 
     <section class="ftco-section bg-light">
       <div class="container">
@@ -296,10 +292,10 @@
                 </div>
                 <p class="bottom-area d-flex px-3">
                   <a href="#" class="add-to-cart text-center py-2 mr-1"
-                    ><span>Add to cart <i class="ion-ios-add ml-1"></i></span
+                    ><span>ADD To<i class="ion-ios-cart ml-1"></i></span
                   ></a>
-                  <a href="#" class="buy-now text-center py-2"
-                    >Buy now<span><i class="ion-ios-cart ml-1"></i></span
+                  <a href="#" class="buy-now  text-center py-2"
+                    >ADD TO <span><i class="icon-heart"></i></span
                   ></a>
                 </p>
               </div>
@@ -545,10 +541,10 @@
                 </div>
                 <p class="bottom-area d-flex px-3">
                   <a href="#" class="add-to-cart text-center py-2 mr-1"
-                    ><span>Add to cart <i class="ion-ios-add ml-1"></i></span
+                    ><span>Add TO <i class="ion-ios-cart ml-1"></i></span
                   ></a>
                   <a href="#" class="buy-now text-center py-2"
-                    >Buy now<span><i class="ion-ios-cart ml-1"></i></span
+                    >Add TO<span><i class="icon-heart"></i></span
                   ></a>
                 </p>
               </div>
@@ -649,10 +645,9 @@
                     >
                       <div class="text text-center px-5">
                         <span class="subheading">Summer Sale</span>
-                        <h2>Extra 50% Off</h2>
+                        <h2>Grab The Offers</h2>
                         <p>
-                          Separated they live in Bookmarksgrove right at the
-                          coast of the Semantics, a large language ocean.
+                         The greatest glory in living lies not in never falling, but in rising every time we fall. 
                         </p>
                         <p>
                           <a href="#" class="btn btn-black px-3 py-2"
@@ -669,7 +664,7 @@
                     >
                       <div class="text text-center text-white px-5">
                         <span class="subheading">Shoes</span>
-                        <h2>Best Sellers</h2>
+                        <h2>Kids Collection</h2>
                         <p>
                           Separated they live in Bookmarksgrove right at the
                           coast of the Semantics, a large language ocean.
@@ -692,7 +687,7 @@
 
     <div
       class="container-fluid"
-      style="width: auto; height: 150px; background-color: rgb(242, 242, 242)"
+      style="width: auto; height: 150px; background-color: #f8f9fa "
     ></div>
 
     <footer class="ftco-footer ftco-section">
@@ -709,22 +704,15 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Minishop</h2>
+              <h2 class="ftco-heading-2">SHOEHUB</h2>
               <p>
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia.
+                "The right shoes can make everything different.”
               </p>
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
                 <li class="ftco-animate">
-                  <a href="#"><span class="icon-twitter"></span></a>
-                </li>
-                <li class="ftco-animate">
-                  <a href="#"><span class="icon-facebook"></span></a>
-                </li>
-                <li class="ftco-animate">
-                  <a href="#"><span class="icon-instagram"></span></a>
+                  <a href=""><span class="icon-instagram"></span></a>
                 </li>
               </ul>
             </div>
@@ -733,10 +721,10 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Menu</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Shop</a></li>
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Journal</a></li>
+                <li><a href="#" class="py-2 d-block">Home</a></li>
+                <li><a href="#" class="py-2 d-block">Catalog</a></li>
                 <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+                <li><a href="#" class="py-2 d-block">Profile</a></li>
               </ul>
             </div>
           </div>
@@ -756,10 +744,6 @@
                   </li>
                   <li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
                 </ul>
-                <ul class="list-unstyled">
-                  <li><a href="#" class="py-2 d-block">FAQs</a></li>
-                  <li><a href="#" class="py-2 d-block">Contact</a></li>
-                </ul>
               </div>
             </div>
           </div>
@@ -771,20 +755,19 @@
                   <li>
                     <span class="icon icon-map-marker"></span
                     ><span class="text"
-                      >203 Fake St. Mountain View, San Francisco, California,
-                      USA</span
+                      >HiLight business Park , calicut ,kerala</span
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><span class="icon icon-phone"></span
-                      ><span class="text">+2 392 3929 210</span></a
+                      ><span class="text">6238424753</span></a
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><span class="icon icon-envelope"></span
-                      ><span class="text">info@yourdomain.com</span></a
+                      ><span class="text">shoehub2023@gmail.com</span></a
                     >
                   </li>
                 </ul>
@@ -800,9 +783,9 @@
               <script>
                 document.write(new Date().getFullYear());
               </script>
-              All rights reserved | This template is made with
+              All rights reserved | This template is made 
               <i class="icon-heart color-danger" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib</a>
+              <a href="https://colorlib.com" target="_blank">Shifin</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
