--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -32,7 +32,7 @@
 					<img src="../images/logo.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" action="/TFlogin" method="post" id="form">
+				<form class="login100-form validate-form" action="/postlogin" method="post" id="form">
 					<span class="login100-form-title">
 						Login
 					</span>
