--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -25,6 +25,14 @@
                 <% }) %>              
               </select>
             </div>
+            <div class="form-outline flex-fill mb-0 mt-4">              
+              <select required  class="form-select required" name="category" id="category"   aria-label="Default select example">
+                <option selected value="<%=productData.subCategory%>" disabled="disabled" >SubCategory</option>
+                <% subCategory.forEach((subctgry)=> {%>
+                <option value="<%=subctgry._id%>" ><%=subctgry.subcategory_name%></option>
+                <% }) %>              
+              </select>
+            </div>
             <div class="form-outline flex-fill mb-0 mt-3">
               <label class="form-label" for="form3Example1c">Description</label>
               <input type="text" value="<%=productData.description%>" name="description" id="description"
@@ -39,8 +47,8 @@
               <input class="form-control" type="file" onchange="viewImage(event)" name="myFiles"
                 id="product_image" multiple>
               <input type="hidden" name="image1" value="<%= productData.image1 %>">
-              <input type="hidden" name="image1" value="<%= productData.image2 %>">
-              <input type="hidden" name="image1" value="<%= productData.image3 %>">
+              <input type="hidden" name="image2" value="<%= productData.image2 %>">
+              <input type="hidden" name="image3" value="<%= productData.image3 %>">
               <img src="../<%=productData.image1%>.jpg" id="imgView" alt="" style="width:100px;height:auto">
             </div>
             <div class="d-flex justify-content-center mt-1">
