--- a/views/admin/productDetails.ejs
+++ b/views/admin/productDetails.ejs
@@ -1,88 +1,4 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-    <link rel="stylesheet" href="/css/adminCommon.css" type="text/css" />
-    <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="/css/sidebar.css">
-    <title>Admin panel</title>
-  </head>
-
-  <body>
-    <section id="menu">
-      <div class="logo">
-        <h2>SHOE HUB</h2>
-      </div>
-      <div class="items">
-        <li>
-          <i class="material-symbols-outlined"> home </i
-          ><a href="/admin">Home</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined"> inventory_2 </i
-          ><a href="/admin/productdetails">Products</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined">add</i
-          ><a href="/admin/addProduct">add Products</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined"> category </i
-          ><a href="">Categories</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined"> group </i
-          ><a href="">Users</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined"> list_alt </i
-          ><a href="">Orders</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined"> ad_units </i
-          ><a href="">Banners</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined"> summarize </i
-          ><a href="">Sales Reports</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined"> confirmation_number </i
-          ><a href="">Coupons</a>
-        </li>
-        <li>
-          <i class="material-symbols-outlined"> logout </i
-          ><a href="">Logout</a>
-        </li>
-      </div>
-    </section>
-    <section class="sectionTop" id="interface" style="z-index: 999">
-      <div class="navigation">
-        <div>
-          <i id="menu-btn" class="material-symbols-outlined"> menu </i>
-        </div>
-        <div class="profile">
-          <div class="dropdown">
-            <button
-              class="btn"
-              type="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <i class="material-symbols-outlined"> account_circle </i>
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item disabled" href="#">admin</a></li>
-              <li><a class="dropdown-item" href="">logout</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+<%- include("../partials/adminSidebar.ejs") %> 
 
 <!-- PRODUCT DETAILS -->
     <div class="col py-3">
@@ -93,9 +9,9 @@
           </div>
           <div class="container mt-5 table-responsive">
             <table class="table mt-5" id="table">
-              <thead>
+              <thead class="bg-light">
                 <tr>
-                  <th scope="col">No</th>
+                  <th  scope="col">No</th>
                   <th scope="col">Product Name</th>
                   <th scope="col">Price</th>
                   <th scope="col">Category</th>
@@ -104,6 +20,7 @@
                   <th scope="col">Size</th>
                   <th scope="col">Image</th>
                   <th scope="col">Actions</th>
+                  <th scopr="col"></th>
                 </tr>
               </thead>
               <tbody>
