--- a/views/admin/subCategory.ejs
+++ b/views/admin/subCategory.ejs
@@ -24,8 +24,8 @@
         <tr>
           <th scope="col">No</th>
           <th scope="col">SubCategory</th>
-          <th scope="col">Delete</th>
-          
+          <th scope="col">Edit</th>
+          <th scopre="col">Action</th>
         </tr>
       </thead>
 
@@ -39,51 +39,69 @@
               <td>
                 <%= subctgry.subcategory_name %>
               </td>
+              <td>
+                <form action="/admin/editSubCategory/<%=subctgry._id%>" method="post">
+                  <div class="d-flex">
+                  <input placeholder="Edit category name" name="name" type="text" id="subcategory" class="form-control w-50"  required>                     
+                  <button type="submit" class="btn btn-success">Submit</button>
+                  </div>
+                </form>
+              </td>
              
-            <td>
+            
 
-              
-               <!-- Button trigger modal -->
-               
-               <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-               data-bs-target="#exampleModal-<%=subctgry._id%>">
-               Delete
-             </button>
-             
-             <!-- Modal -->
-             <div class="modal fade" id="exampleModal-<%=subctgry._id%>" tabindex="-1"
-               aria-labelledby="exampleModalLabel" aria-hidden="true">
-               <div class="modal-dialog">
-                 <div class="modal-content">
-                   <div class="modal-header">
-                     <h1 class="modal-title fs-5" id="exampleModalLabel">Delete confirmation</h1>
-                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                   </div>
-                   <% if(subctgry.delete==false){ %>
-                   <div class="modal-body">
-                     Are you sure you want to restore this subCategory <%= subctgry.subcategory_name%>?
-                   </div>
-                   <% } else { %>
-                    <div class="modal-body">
-                      Are you sure you want to delete this category <%= subctgry.subcategory_name%>?
-                    </div>
-                    <% } %>
-                   <div class="modal-footer">
-                  
-                      <button type="button" class="btn btn-secondary"
-                      data-bs-dismiss="modal">Close</button>
-                      <a href="/admin/deleteSubCategory<%=subctgry._id%>">
-                      <button type="button" class="btn btn-danger" >Delete</button></a>
-                     
-                     <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                     <a href="/admin/deleteCategory/<%=subctgry._id%>"><button type="button"
-                         class="btn btn-danger">Delete</button></a> -->
-                   </div>
+
+          <td>
+            <!-- Button trigger modal -->
+            <% if(subctgry.delete==false){ %>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+            data-bs-target="#exampleModal-<%=subctgry._id%>">
+            Delete
+          </button>
+          <% }else{ %>
+           <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+           data-bs-target="#exampleModal-<%=subctgry._id%>">
+           Restore
+         </button>
+         <% } %>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal-<%=subctgry._id%>" tabindex="-1"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Delete confirmation</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <% if(subctgry.delete==false){ %>
+                <div class="modal-body">
+                  Are you sure you want to delete this category <%= subctgry.subcategory_name%>?
+                </div>
+                <% } else { %>
+                 <div class="modal-body">
+                   Are you sure you want to Restore this category <%= subctgry.subcategory_name%>?
                  </div>
-               </div>
-             </div>
-            </td>
-          </tr>
+                 <% } %>
+                <div class="modal-footer">
+                 <% if (subctgry.delete==false) { %>
+                   <button type="button" class="btn btn-secondary"
+                   data-bs-dismiss="modal">Close</button>
+                   <a href="/admin/deleteSubCategory/<%=subctgry._id%>">
+                   <button type="button" class="btn btn-danger" >Delete</button></a>
+                   <% } else { %>
+                         <button type="button" class="btn btn-secondary"
+                                   data-bs-dismiss="modal">Close</button>
+                                 <a href="/admin/restoreSubCategory/<%=subctgry._id%>"><button type="button"
+                                     class="btn btn-primary">Restore</button></a>
+                                 <% } %>
+                  <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <a href="/admin/deleteCategory/<%=subctgry._id%>"><button type="button"
+                      class="btn btn-danger">Delete</button></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+         </td>
          
     <% count++ %>
      <% }) %>
