--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -4,7 +4,7 @@
 
   <div class="col py-3">
 
-    <section class="p-5">
+    <section class="p-5 mt-5">
       <div class="container">
         <div class=" mt-100 mb-5 d-flex align-items-center justify-content-center">
           <h3 class="text-decoration-underline">Coupon management</h3>
