--- a/views/admin/userDetails.ejs
+++ b/views/admin/userDetails.ejs
@@ -7,15 +7,15 @@
    
 
     </div>
-      <div class="col py-3 mt-5">
+      <div class="col py-3 mt-5 ">
 
-        <div class="d-flex align-items-center justify-content-center">
+        <div class="d-flex align-items-center justify-content-center" style="margin-top: 60px;">
           <h1 class="text-decoration-underline">User details</h1>
         </div>
-        <table class="table mt-5" id="tabledata">
+        <table class="table mt-5 bg-dark " id="tabledata" >
           <thead>
-            <tr>
-              <th scope="col">No</th>
+            <tr style="color: white;">
+              <th scope="col" >No</th>
               <th scope="col">name</th>
               <th scope="col">email</th>
               <th scope="col">Mobile</th>
