--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -4,8 +4,8 @@
     <div class="main-body">
         <div class="row">
             <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-body">
+                <div class="card mt-5">
+                    <div class="card-body bg-light">
                         <div class="d-flex flex-column align-items-center text-center">
                             <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
                                 class="rounded-circle p-1 bg-primary" width="110">
@@ -13,13 +13,12 @@
                                 <h4>
                                     <%=userData.username%>
                                 </h4>
-                                <p class="text-secondary mb-1">Full Stack Developer</p>
-                                <p class="text-muted font-size-sm">Bay Area, San Francisco, CA</p>
-                                <button class="btn btn-outline-primary">Home</button>
+                              
+                                <a href="/"><button class="btn btn-outline-primary">Home</button></a>
                             </div>
                         </div>
                         <hr class="my-4">
-                        <ul class="list-group list-group-flush">
+                        <!-- <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -76,15 +75,15 @@
                                     </svg>Facebook</h6>
                                 <span class="text-secondary">bootdey</span>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
            
             <div class="col-lg-8">
                 <form action="/postEditProfile" method="post" id="form">
-                <div class="card">
-                    <div class="card-body">
+                <div class="card mt-5">
+                    <div class="card-body bg-light">
                         <div class="row mb-3">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Full Name</h6>
