--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -32,16 +32,18 @@
 					<img src="../images/logo.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" action="/postlogin" method="post" id="form">
+				<form class="login100-form validate-form" action="/postlogin" onsubmit="return submitform(events)" method="post" id="form">
 					<span class="login100-form-title">
 						Login
 					</span>
 
-                        <div>
+                        
                     <% if(locals.invalid){ %> 
                     <p class="text-danger d-flex justify-content-center mb-2"><%=invalid%> </p>
                     <% } %> 
-                    </div>
+
+					<p id="alert" class="text-danger d-flex justify-content-center"></p>
+                    
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
 						<input class="input100" type="text" id="email" name="email" placeholder="Email">
@@ -95,6 +97,7 @@
 	<script src="../loginTemplate/vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
 	<script src="../loginTemplate/vendor/select2/select2.min.js"></script>
+	<script src="../js/loginValidation.js"> </script>
 <!--===============================================================================================-->
 	<script src="../loginTemplate/vendor/tilt/tilt.jquery.min.js"></script>
 	<script >
