--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -2,7 +2,7 @@
 
 
 <section style="background-color: #eee;">
-  <div class="container py-5">
+  <div class="container py-5 mt-5">
     <div class="row">
       <div class="col">
         <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
@@ -19,7 +19,7 @@
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
             <div class="d-flex justify-content-center mb-2 mt-5">
               <button type="button" class="btn btn-primary">Home</button>
@@ -27,7 +27,7 @@
             </div>
           </div>
         </div>
-        <div class="card mb-4 mb-lg-0">
+        <!-- <div class="card mb-4 mb-lg-0">
           <div class="card-body p-0">
             <ul class="list-group list-group-flush rounded-3">
               <li class="list-group-item d-flex justify-content-between align-items-center p-3">
@@ -52,7 +52,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="col-lg-8">
         <div class="card mb-4">
@@ -100,7 +100,7 @@
               <button class="btn btn-primary">Edit</button></a>
               </div>
               <div class="col-sm-9">
-               <button class="btn btn-primary">Change Password</button>
+               <!-- <button class="btn btn-primary">Change Password</button> -->
               </div>
             </div>
           </div>
