--- a/views/user/userTwoFactor.ejs
+++ b/views/user/userTwoFactor.ejs
@@ -13,7 +13,7 @@
      <div class="card-header h5 text-white bg-primary">Two Factor</div>
      <div class="card-body px-5">
              <% if (locals.invalid){ %> 
-             <p class="alert bg-light text-danger" style="border-style:dashed;border-color: brown;"><%= invalid %>  </p>
+             <p class="alert bg-light text-danger" style="border-style:dashed;border-color: brown;"><%=invalid%> </p>
               <% } %> 
              <h5> Enter your otp </h5>
              <p class="card-text py-2">
@@ -23,9 +23,9 @@
          
          <form action="/twoFactorLogin" method="post">
          <div class="form-outline">
-            
+            <% if (locals.email){ %> 
             <input type="hidden" name="email" value="<%= email %>">
-     
+            <% } %>
              <input type="number" id="otp-reset" placeholder="Enter your otp" name="otp" class="form-control my-3" required/>
          </div>
         <button type="submit" class="btn btn-primary w-100">Confirm</button>
