--- a/views/partials/templateHeader.ejs
+++ b/views/partials/templateHeader.ejs
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="/css/jquery.timepicker.css">
 
-    
+    <link rel="stylesheet" type="text/css" href="/css/cartImage.css">
     <link rel="stylesheet" href="/css/flaticon.css">
     <link rel="stylesheet" href="/css/icomoon.css">
     <link rel="stylesheet" href="/css/style.css">
