--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -1,4 +1,6 @@
 <%- include('../partials/templateHeader.ejs')  %> 
+
+ 
     <!-- END nav -->
 
     <div class="hero-wrap hero-bread" style="background-image: url('images/bg_6.jpg');">
@@ -13,6 +15,7 @@
     </div>
 
     <section class="ftco-section ftco-cart">
+		<% if (locals.countInCart!==0) { %> 
 			<div class="container">
 				<div class="row">
     			<div class="col-md-12 ftco-animate">
@@ -47,6 +50,9 @@
 									<h6><%=product?.productDetail?.size[0] %> </h6>
 								</td>
 						        
+
+ 
+
 						        <td class="price"><%= product.productDetail.price%> ₹ </td>
 						        
 						        <td class="quantity">
@@ -56,7 +62,7 @@
 										   <i class="ion-ios-remove"></i>
 											</button>
 											</span>
-										 <input type="text" id="<%= product.productDetail._id %>" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
+										 <input type="text" id="<%= product.productDetail._id %>" name="quantity" class="quantity form-control input-number" value="<%= product.productQuantity%>" min="1" max="100">
 										 <span class="input-group-btn ml-2">
 											<button type="button"  onclick="changeQuantity('<%= product._id %>','<%= product.productDetail._id %>',1)" class="quantity-right-plus btn" data-type="plus" data-field="">
 											 <i class="ion-ios-add"></i>
@@ -82,11 +88,73 @@
 					  </div>
     			</div>
     		</div>
+			<% if (locals.countInCart!==0) { %> 
+			<div class="row justify-content-start">
+    			<div class="col col-lg-5 col-md-6 mt-5 cart-wrap ftco-animate">
+    				<div class="cart-total mb-3">
+    					<h3>Cart Totals</h3>
+    					<p class="d-flex">
+    						<span>Subtotal</span>
+							<% if(locals.sum!==0){%>
+						<strong class="text-black"><%=sum%> ₹</strong>
+							<% } else { %>
+						<strong class="text-black">0 ₹</strong>
+								<%}%>
+
+    					</p>
+    					<p class="d-flex">
+    						<span>Delivery</span>
+							<% if(locals.sum<1000) {%>
+						<strong class="text-black">40 ₹</strong>
+						<small class="text-danger">shop for 1000 or more to get free delivery</small>
+						<% } else { %>
+							<strong class="text-black">0₹(free delivery)</strong> 
+							
+						  <%}%>
+    					</p>
+    					<hr>
+    					<p class="d-flex total-price">
+    						<span>Total</span>
+							<% if(locals.sum<1000) {%>
+						<strong class="text-black"><%=sum+40%> ₹</strong>
+						<% } else { %>
+							<strong class="text-black"><%=sum%> ₹</strong>
+							
+						  <%}%>
+    					</p>
+    				</div>
+    				<p class="text-center"><a href="" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
+					<% } %>
+    			</div>
+    		</div>
+			</div>
+			<% } else { %>
+
+				<div class=" container-fluid d-flex justify-content-center   ">
+				  <img
+					src="/images/6028969.png"
+					
+					id="imageCart" 
+					class="img-fluid rounded mx-auto d-block mb-5"
+					alt="image"
+				  />
+				
+				</div>
+				<div class="text-center">
+					<a href="/shop"
+					  ><button type="button" style="width:10rem;" class="btn btn-warning">shop Now</button></a
+					>
+				  </div>
+			 
+				
+				<% } %>
+		</section>
+
     		
 			</div> 
-		</section>
-		<script src="/js/ajaxRequest.js">
 
-		</script>
+			
+		</section>
+		<script src="../js/ajaxRequest.js"></script>
 
     <%- include('../partials/templateFooter.ejs')  %> 
