banner bug fixed

--- a/views/partials/adminSidebar.ejs
+++ b/views/partials/adminSidebar.ejs
@@ -43,10 +43,10 @@
           <i class="material-symbols-outlined"> list_alt </i
           ><a href="">Orders</a>
         </li>
-        <!-- <li>
+        <li>
           <i class="material-symbols-outlined"> ad_units </i
-          ><a href="">Banners</a>
-        </li> -->
+          ><a href="/admin/getBanner">Banners</a>
+        </li>
         <!-- <li>
           <i class="material-symbols-outlined"> summarize </i
           ><a href="">Sales Reports</a>
