--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -160,7 +160,7 @@
                 data-scrollax=" properties: { translateY: '70%' }"
               >
                 <div class="text">
-                  <span class="subheading">#New Arrival</span>
+                  <span class="subheading">#Use Coupon</span>
                   <div class="horizontal">
                     <h1 class="mb-4 mt-3">New Shoes Winter Collection</h1>
                     <p class="mb-4">
